@@ -55,7 +55,7 @@ they occurred between. For more detailed information see the
 
 @item Shrinking/Yanking Support [Timo Korvola]
 
-@item Infinite Desktop Feature [David T. McWherter]
+@item Infinite Desktop Feature (make the virtual desktop bigger than the physical) [David T. McWherter]
 @end itemize
 
 @item Other changes:
