@@ -3,6 +3,10 @@
 	* sawfish-wm.desktop
 	* sawfish-session.desktop: remove useless translations, which are equal to the original string
 
+	* lisp/sawfish/wm/ext/infinite-desktop.jl: update file-header
+
+	* man/news.texi: better description for infinite-desktop.jl
+
 2009-02-17  Christopher Bratusek <zanghar@freenet.de>
 	* Makefile.in
 	* sawfish-session.desktop: added session desktop file
